[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cesm-hawc-ali"
version = "0.1.0"
description = "Feed CESM2/WACCM SAI output into the HAWC ALI limb imager simulator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "xarray",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "matplotlib", "pandas", "cartopy"]

[tool.setuptools.packages.find]
where = ["src"]
